Fix: header stops hidding when menu is visible

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -105,6 +105,8 @@
 @media(max-width:1300px){
     .close-button{
         display: block;
-        
+        }
+    .sort-container label {
+        font-size: 14px;
     }
 }
