--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ nav {
     left: 0;
     width: 200px;
     height: 100%;
-    background-color: #86858561;
+    background-color: #dbdbdbf3;
     border: 4px solid #0D448C;
     padding-left: 30px;
     padding-top: 40px;
